created class AppDbContext and entity HelpCall

--- a/KickScooter-API/KickScooter-API/KickScooter-API.csproj
+++ b/KickScooter-API/KickScooter-API/KickScooter-API.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KickScooter-API.BLL\KickScooter-API.BLL.csproj" />
+  </ItemGroup>
+
 </Project>
