--- a/Cactus-API/Cactus-API/appsettings.json
+++ b/Cactus-API/Cactus-API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DBConnection": "Server=(localdb)\\MSSQLLocalDB;Database=KickScooterDb;Trusted_Connection=true",
+    "AZURE_SQL_CONNECTION": "Server=tcp:cactusserver.database.windows.net,1433;Initial Catalog=CactusDB;Persist Security Info=False;User ID=Admin01;Password=Nazar@26102002;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
