--- a/Cactus-API/Cactus-API/appsettings.Development.json
+++ b/Cactus-API/Cactus-API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DBConnection": "Server=(localdb)\\MSSQLLocalDB;Database=KickScooterDb;Trusted_Connection=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
