--- a/.github/workflows/feature-creating-db-in-azure-sql-server_cactusscooterapi.yml
+++ b/.github/workflows/feature-creating-db-in-azure-sql-server_cactusscooterapi.yml
@@ -6,7 +6,7 @@ name: Build and deploy ASP.Net Core app to Azure Web App - cactusscooterapi
 on:
   push:
     branches:
-      - feature/creating-db-in-azure-sql-server
+      - develop
   workflow_dispatch:
 
 jobs:
