deleted attribute from desc in ScooterProduct entity and completed creating db in Azure

--- a/Cactus-API/Cactus-API/appsettings.json
+++ b/Cactus-API/Cactus-API/appsettings.json
@@ -2,6 +2,26 @@
   "ConnectionStrings": {
     "DBConnection": "Server=tcp:cactusserver.database.windows.net,1433;Initial Catalog=CactusDB;Persist Security Info=False;User ID=Admin01;Password=Nazar@26102002;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
+  "Serilog": {
+    "Using": [],
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.log",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
